--- a/notebooks/interesting-genes.Rmd
+++ b/notebooks/interesting-genes.Rmd
@@ -24,8 +24,8 @@ The intersection of Visceral en Subcutaneous yielded no interesting genes.
 TM4SF1 = top marker Peri. MEST = 4th marker Peri. IGFBP5 = top marker Supra. BARX1 = marker gene Visce. TNFRSF11B = marker Supra. 
 
 
-```{r fig1, fig.height = 12, fig.width = 10, fig.align = "center"}
-VlnPlot(all10x, features.plot=toupper(c('TM4SF1', 'LY6K', 'IGFBP5', 'MEST', 'BARX1', 'TNFRSF11B', 'SERTAD4-AS1')), group.by='sample_name', point.size.use=-1, nCol=2, x.lab.rot=T, size.x.use=10)
+```{r fig1, fig.height = 9, fig.width = 10, fig.align = "center"}
+VlnPlot(all10x, features.plot=toupper(c('TM4SF1', 'LY6K', 'IGFBP5', 'BARX1', 'TNFRSF11B', 'SERTAD4-AS1')), group.by='sample_name', point.size.use=-1, nCol=2, x.lab.rot=T, size.x.use=10)
 ```
 
 
